--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.35",
     "typescript": "^4.6.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1"
   }
 }
