--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,11 @@
     "@types/chai-http": "^4.2.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.35",
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
+    "mocha": "^10.0.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
   },
