--- a/backend/package.json
+++ b/backend/package.json
@@ -16,9 +16,11 @@
     "@types/express": "^4.17.13",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.35",
+    "@types/sinon": "^10.0.11",
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
     "mocha": "^10.0.0",
+    "sinon": "^14.0.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
   },
