--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev src/index.ts",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "test": "jest -i --forceExit --verbose",
+    "test:dev": "mocha -r ts-node/register src/tests/unit/**/*.test.ts --exit -t 60000",
+    "build": "tsc",
+    "postinstall": "npm run build",
+    "prestart": "npm run build",
+    "start": "node ./dist/src/index.js"
   },
   "keywords": [],
   "author": "",
