feat: implemented MongoModel.ts

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "test": "jest -i --forceExit --verbose",
-    "test:dev": "mocha -r ts-node/register src/tests/unit/**/*.test.ts --exit -t 60000",
+    "test:unit": "mocha -r ts-node/register src/tests/unit/**/*.test.ts --exit -t 60000",
+    "test:integration": "mocha -r ts-node/register src/tests/integration/**/*.test.ts --exit -t 60000",
     "build": "tsc",
     "postinstall": "npm run build",
     "prestart": "npm run build",
