--- a/backend/package.json
+++ b/backend/package.json
@@ -17,15 +17,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.3.1",
-    "@typescript-eslint/parser": "5.3.1",
-    "eslint": "7.32.0",
-    "eslint-config-airbnb-base": "15.0.0",
-    "eslint-config-airbnb-typescript": "15.0.0",
-    "eslint-plugin-editorconfig": "3.2.0",
-    "eslint-plugin-import": "2.25.3",
-    "eslint-plugin-mocha": "9.0.0",
-    "eslint-plugin-sonarjs": "0.10.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/chai": "^4.3.1",
     "@types/chai-http": "^4.2.0",
     "@types/cors": "^2.8.12",
@@ -33,14 +25,24 @@
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.35",
     "@types/sinon": "^10.0.11",
+    "@typescript-eslint/eslint-plugin": "5.3.1",
+    "@typescript-eslint/parser": "5.3.1",
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
+    "eslint": "7.32.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-airbnb-typescript": "15.0.0",
+    "eslint-plugin-editorconfig": "3.2.0",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-mocha": "9.0.0",
+    "eslint-plugin-sonarjs": "0.10.0",
     "mocha": "^10.0.0",
     "sinon": "^14.0.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
